[Aux] Migrating is in progress.
Variant class now lives into its own file.

--- a/src/examples/CMakeLists.txt
+++ b/src/examples/CMakeLists.txt
@@ -1,10 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT(blackhole-examples)
 
-ADD_SUBDIRECTORY(trivial)
-ADD_SUBDIRECTORY(simple)
-ADD_SUBDIRECTORY(files)
-ADD_SUBDIRECTORY(syslog)
-ADD_SUBDIRECTORY(logstash)
-ADD_SUBDIRECTORY(init-from-file)
-ADD_SUBDIRECTORY(elasticsearch)
+#ADD_SUBDIRECTORY(trivial)
+#ADD_SUBDIRECTORY(simple)
+#ADD_SUBDIRECTORY(files)
+#ADD_SUBDIRECTORY(syslog)
+#ADD_SUBDIRECTORY(logstash)
+#ADD_SUBDIRECTORY(init-from-file)
+#ADD_SUBDIRECTORY(elasticsearch)
