[Aux] Migrating to the new dynamic keeper system has been finished for json initialization.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -42,7 +42,7 @@ SET(BASE_SOURCES
 #    test_AttachableStream
 #    test_Attribute
 #    test_Config
-#    test_ConfigJsonInitialization
+    test_ConfigJsonInitialization
 #    test_ExceptionTrap
     test_FactoryInitialization
 #    test_FileRotation
