--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -1,4 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
+ADD_DEFINITIONS(-DBLACKHOLE_HEADER_ONLY)
+
 ADD_SUBDIRECTORY(performance)
 ADD_SUBDIRECTORY(vsboost)
