[Aux] Tiny fix.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -15,7 +15,7 @@ IF(ENABLE_ELASTICSEARCH)
     ADD_DEFINITIONS(-DURDL_DISABLE_SSL=1)
 ENDIF()
 
-ADD_DEFINITIONS(-DBLACKHOLE_HEADER_ONLY=1)
+ADD_DEFINITIONS(-DBLACKHOLE_HEADER_ONLY)
 
 IF(ENABLE_ELASTICSEARCH_DEBUG)
     ADD_DEFINITIONS(-DENABLE_ELASTICSEARCH_DEBUG=1)
