[Thread Safety] Socket sink's thread-safety is now properly handled.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -67,13 +67,14 @@ SET(BASE_SOURCES
     test_StringPatternParser
     test_SyslogSink
     test_Traits
-    test_UdpSink
     test_Utils
     test_VerboseLogger
     utils/test_GenericStringFormatter
-    Trace
-    Wrapper
     Dynamic
+    TcpSink
+    Trace
+    UdpSink
+    Wrapper
 )
 
 IF(ENABLE_ELASTICSEARCH)
