[Project] Moving `BLACKHOLE_HEADER_ONLY` declaration to the config file.

--- a/config.hpp.in
+++ b/config.hpp.in
@@ -4,6 +4,7 @@
 #define BLACKHOLE_VERSION_MAJOR ${BLACKHOLE_VERSION_MAJOR}
 #define BLACKHOLE_VERSION_MINOR ${BLACKHOLE_VERSION_MINOR}
 #define BLACKHOLE_VERSION_PATCH ${BLACKHOLE_VERSION_PATCH}
+#cmakedefine BLACKHOLE_HEADER_ONLY
 #cmakedefine BLACKHOLE_DEBUG
 
 #if defined(BLACKHOLE_HEADER_ONLY)
