[Project] Disable tests and examples by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ SET(BLACKHOLE_VERSION "${BLACKHOLE_VERSION_MAJOR}.${BLACKHOLE_VERSION_MINOR}.${B
 
 OPTION(BLACKHOLE_HEADER_ONLY "Build as header-only library" ON)
 OPTION(BLACKHOLE_DEBUG "Enable debugging messages support" ON)
-OPTION(ENABLE_TESTING "Enable testing" ON)
-OPTION(ENABLE_EXAMPLES "Enable examples" ON)
+OPTION(ENABLE_TESTING "Enable testing" OFF)
+OPTION(ENABLE_EXAMPLES "Enable examples" OFF)
 OPTION(ENABLE_BENCHMARKING "Enable benchmarking" OFF)
 OPTION(ENABLE_ELASTICSEARCH "Enable elasticsearch sink" OFF)
 OPTION(ENABLE_ELASTICSEARCH_DEBUG "Enable elasticsearch debug" OFF)
