[Benchmark] Using new benchmarking framework.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "foreign/urdl"]
 	path = foreign/urdl
 	url = git://github.com/chriskohlhoff/urdl.git
+[submodule "foreign/ticktack"]
+	path = foreign/ticktack
+	url = git://github.com/3hren/ticktack
