[Aux] Massive log record refactoring.
Inner attribute set is now completely incapsulated. Log record can
return const reference to it if needed. Also setter method added.

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -9,8 +9,8 @@ SET(HEADERS
 )
 
 SET(SOURCES
-    attribute_set
-    detail/datetime
+#    attribute_set
+#    detail/datetime
     formatter/string
     logger/logger
 )
