[Aux] Massive refactoring done over attribute set view iterator. [Unit Testing] Tests added.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -91,10 +91,15 @@ IF(ENABLE_ELASTICSEARCH)
     )
 ENDIF()
 
+SET(DEVELOP_SOURCES
+    View
+)
+
 SET(SOURCES
     ${MAIN_SOURCES}
     ${BASE_SOURCES}
     ${ES_SOURCES}
+    ${DEVELOP_SOURCES}
 )
 
 SET(Boost_USE_MULTITHREADED ON)
