[Formatter.String] Introducing optional placeholder.
Now string formatter can accept optional attribute placeholder. It doesn't throw when specified attribute wasn't found in attribute set.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -92,14 +92,15 @@ IF(ENABLE_ELASTICSEARCH)
 ENDIF()
 
 SET(DEVELOP_SOURCES
-    Record
-    View
+#    Record
+#    View
+    test_StringFormatter
 )
 
 SET(SOURCES
     ${MAIN_SOURCES}
-    ${BASE_SOURCES}
-    ${ES_SOURCES}
+#    ${BASE_SOURCES}
+#    ${ES_SOURCES}
     ${DEVELOP_SOURCES}
 )
 
