[Experimental] Stateful string formatter parser.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -98,13 +98,14 @@ IF(ENABLE_ELASTICSEARCH)
 ENDIF()
 
 SET(SOURCES_DEVELOP
+    stringng
 )
 
 SET(SOURCES
     ${SOURCE_MAIN}
-    ${SOURCES_BASE}
-    ${SOURCES_FORMATTER}
-    ${SOURCES_ES}
+#    ${SOURCES_BASE}
+#    ${SOURCES_FORMATTER}
+#    ${SOURCES_ES}
     ${SOURCES_DEVELOP}
 )
 
