[Benchmarking] Massive refactoring over logger benchmarks.
 - Initialization function has been decomposed into separate file.
 - Utilized some constants like message format and message itself.

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -6,6 +6,7 @@ ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/foreign/ticktack ${CMAKE_BINARY_DIR}/tickta
 SET(CMAKE_BUILD_TYPE "Release")
 
 SET(HEADERS
+    util.hpp
 )
 
 SET(SOURCES
