--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(PROJECT blackhole-benchmark)
 
-ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/foreign/ticktack ${CMAKE_BINARY_DIR}/ticktack)
+ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/foreign/epicmeter ${CMAKE_BINARY_DIR}/epicmeter)
 
 SET(CMAKE_BUILD_TYPE "Release")
 
@@ -11,8 +11,8 @@ SET(HEADERS
 
 SET(SOURCES
 #    attribute_set
-#    detail/datetime
-#    formatter/string
+    detail/datetime
+    formatter/string
     logger/batch
     logger/logger
 #    logger/thread
@@ -23,11 +23,11 @@ PROJECT(${PROJECT})
 INCLUDE_DIRECTORIES(
     ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_SOURCE_DIR}/foreign/rapidjson/include
-    ${CMAKE_SOURCE_DIR}/foreign/ticktack/include
+    ${CMAKE_SOURCE_DIR}/foreign/epicmeter/include
 )
 
 LINK_DIRECTORIES(
-    ${CMAKE_BINARY_DIR}/ticktack
+    ${CMAKE_BINARY_DIR}/epicmeter
 )
 
 SET(Boost_USE_MULTITHREADED ON)
@@ -44,8 +44,8 @@ ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})
 
 TARGET_LINK_LIBRARIES(${PROJECT}
     ${Boost_LIBRARIES}
-    ticktack
-    ticktack-main
+    epicmeter
+    epicmeter-main
 )
 
 ADD_DEFINITIONS(-std=c++0x)
