[Performance] Changed attribute set underlying representation.
Now attribute set is internally represented as vector of pairs. This change allows to keep attributes in single memory block, which is good for caching and performance.

On the other hand attribute lookup time by user attributes may increase, because they are scanned using linear search. Also I don't see any need for handling duplicates.

There are two attributes sets in every record: internal and external. Internal attributes is setting by logger itself: message, severity, timestamp, pid, tid or lwp. All attributes that is configured via scoped sets or wrappers - are external. This distribution allows me in the future to map each internal attribute with its unique number to perform even more faster table lookup.

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -15,7 +15,8 @@ SET(SOURCES
     formatter/string
     logger/batch
     logger/logger
-#    logger/thread
+    logger/thread
+#    experimental
 )
 
 PROJECT(${PROJECT})
