[Detail] Temporary suppress thread benchmarking.

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -15,7 +15,7 @@ SET(SOURCES
     formatter/string
     logger/batch
     logger/logger
-    logger/thread
+#    logger/thread
 #    experimental
 )
 
