[API] Changed logger creation API.
It's now possible to forward all required arguments to final logger's constructor, while creating it through a repository.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -107,9 +107,9 @@ SET(SOURCES_DEVELOP
 
 SET(SOURCES
     ${SOURCE_MAIN}
-#    ${SOURCES_BASE}
-#    ${SOURCES_FORMATTER}
-#    ${SOURCES_ES}
+    ${SOURCES_BASE}
+    ${SOURCES_FORMATTER}
+    ${SOURCES_ES}
     ${SOURCES_DEVELOP}
 )
 
