[API] Redesign invalid record concept.
When opening a record there is a non-zero chance, that you will receive an empty record with no attributes attached. Previously it was considered as invalid record, because there was at least pid and tid attributes attached. But now seems to be there is no need to attach internal attributes before filtering. However now it is considered as valid, just without attributes.

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -4,6 +4,7 @@ SET(PROJECT blackhole-benchmark)
 ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/foreign/epicmeter ${CMAKE_BINARY_DIR}/epicmeter)
 
 SET(CMAKE_BUILD_TYPE "Release")
+ADD_DEFINITIONS(-DBOOST_DISABLE_ASSERTS=1)
 
 SET(HEADERS
     util.hpp
