--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,11 +1,39 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 SET(PROJECT blackhole-tests)
 
-# The next line enforces google testing framework to use own tuple implementation.
-ADD_DEFINITIONS(-DGTEST_USE_OWN_TR1_TUPLE=1)
-ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/foreign/gmock ${CMAKE_BINARY_DIR}/gmock)
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-ENABLE_TESTING()
+INCLUDE(Compiler)
+
+# Use gmock 1.6 for ancient compilers and systems.
+IF(CMAKE_VERSION VERSION_LESS 2.8.5 OR (DEFINED GCC_COMPILER_VERSION AND GCC_COMPILER_VERSION VERSION_LESS 4.8))
+    # Hack for cmake (< 2.8.5), which cannot extract zip archives.
+    # Also gmock doesn't compile on GCC (< 4.8).
+    SET(GMOCK_URL "https://s3-us-west-2.amazonaws.com/blackhole.testing/gmock-1.6.0.tar.gz")
+ELSE()
+    SET(GMOCK_URL "https://googlemock.googlecode.com/files/gmock-1.7.0.zip")
+    SET(GMOCK_URL_MD5 073b984d8798ea1594f5e44d85b20d66)
+ENDIF()
+
+INCLUDE(ExternalProject)
+SET_DIRECTORY_PROPERTIES(properties EP_PREFIX "${CMAKE_BINARY_DIR}/foreign")
+ExternalProject_ADD(googlemock
+    URL ${GMOCK_URL}
+    SOURCE_DIR "${CMAKE_BINARY_DIR}/foreign/gmock"
+    CMAKE_ARGS "-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}"
+    INSTALL_COMMAND ""
+)
+ExternalProject_GET_PROPERTY(googlemock SOURCE_DIR)
+ExternalProject_GET_PROPERTY(googlemock BINARY_DIR)
+SET(GMOCK_SOURCE_DIR ${SOURCE_DIR})
+SET(GMOCK_BINARY_DIR ${BINARY_DIR})
+
+INCLUDE_DIRECTORIES(
+    SYSTEM ${GMOCK_SOURCE_DIR}/include
+    SYSTEM ${GMOCK_SOURCE_DIR}/gtest/include
+)
+
+LINK_DIRECTORIES(${GMOCK_BINARY_DIR} ${GMOCK_BINARY_DIR}/gtest)
 
 SET(CMAKE_BUILD_TYPE "Debug")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
@@ -125,18 +153,13 @@ PROJECT(${PROJECT})
 INCLUDE_DIRECTORIES(
     ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_SOURCE_DIR}/foreign/rapidjson/include
-    SYSTEM ${CMAKE_SOURCE_DIR}/foreign/gmock/include
-    SYSTEM ${CMAKE_SOURCE_DIR}/foreign/gtest/include
-)
-
-LINK_DIRECTORIES(
-    ${CMAKE_BINARY_DIR}/gmock/gtest
-    ${CMAKE_BINARY_DIR}/gmock
 )
 
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
 
 ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})
+
+ADD_DEPENDENCIES(${PROJECT} googlemock)
 
 TARGET_LINK_LIBRARIES(${PROJECT}
     ${CMAKE_THREAD_LIBS_INIT}
@@ -152,6 +175,7 @@ IF(ENABLE_ELASTICSEARCH)
     )
 ENDIF()
 
+ENABLE_TESTING()
 ADD_TEST(NAME blackhole-tests COMMAND blackhole-tests)
 
 ADD_DEFINITIONS(-std=c++0x)
