[Functional Testing] The beginning.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -133,12 +133,17 @@ IF(ENABLE_TRACING_FRAMEWORK)
     )
 ENDIF()
 
+SET(SOURCES_FUNCTIONAL
+    functional/threading/logger
+)
+
 SET(SOURCES_DEVELOP
 )
 
 SET(SOURCES
     ${SOURCE_MAIN}
     ${SOURCES_BASE}
+    ${SOURCES_FUNCTIONAL}
     ${SOURCES_FORMATTER}
     ${SOURCES_ES}
     ${SOURCES_TRACING}
