--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -20,7 +20,7 @@ SET_DIRECTORY_PROPERTIES(properties EP_PREFIX "${CMAKE_BINARY_DIR}/foreign")
 ExternalProject_ADD(googlemock
     URL ${GMOCK_URL}
     SOURCE_DIR "${CMAKE_BINARY_DIR}/foreign/gmock"
-    CMAKE_ARGS "-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}"
+    CMAKE_ARGS "-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}" "-DCMAKE_CXX_FLAGS=-fPIC"
     INSTALL_COMMAND ""
 )
 ExternalProject_GET_PROPERTY(googlemock SOURCE_DIR)
