[Detail] Tiny project configuration changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT(blackhole)
 
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+
 SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 SET(BLACKHOLE_VERSION_MAJOR 0)
