[Detail] Build environment.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -1,38 +1,19 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-SET(PROJECT blackhole-tests)
 
-INCLUDE(Compiler)
+# Prepare testing infrastructure.
+INCLUDE(DownloadGoogleTesting)
 
-# Use gmock 1.6 for ancient compilers and systems.
-IF(CMAKE_VERSION VERSION_LESS 2.8.5 OR (DEFINED GCC_COMPILER_VERSION AND GCC_COMPILER_VERSION VERSION_LESS 4.8))
-    # Hack for cmake (< 2.8.5), which cannot extract zip archives.
-    # Also gmock doesn't compile on GCC (< 4.8).
-    SET(GMOCK_URL "https://s3-us-west-2.amazonaws.com/blackhole.testing/gmock-1.6.0.tar.gz")
-ELSE()
-    SET(GMOCK_URL "https://googlemock.googlecode.com/files/gmock-1.7.0.zip")
-    SET(GMOCK_URL_MD5 073b984d8798ea1594f5e44d85b20d66)
-ENDIF()
-
-INCLUDE(ExternalProject)
-SET_DIRECTORY_PROPERTIES(properties EP_PREFIX "${CMAKE_BINARY_DIR}/foreign")
-ExternalProject_ADD(googlemock
-    URL ${GMOCK_URL}
-    SOURCE_DIR "${CMAKE_BINARY_DIR}/foreign/gmock"
-    CMAKE_ARGS "-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}" "-DCMAKE_CXX_FLAGS=-fPIC"
-    INSTALL_COMMAND ""
-)
-ExternalProject_GET_PROPERTY(googlemock SOURCE_DIR)
-ExternalProject_GET_PROPERTY(googlemock BINARY_DIR)
-SET(GMOCK_SOURCE_DIR ${SOURCE_DIR})
-SET(GMOCK_BINARY_DIR ${BINARY_DIR})
+DOWNLOAD_GOOGLE_TESTING()
 
 INCLUDE_DIRECTORIES(
-    SYSTEM ${GMOCK_SOURCE_DIR}/include
-    SYSTEM ${GMOCK_SOURCE_DIR}/gtest/include
+    SYSTEM ${GTEST_INCLUDE_DIR}
+    SYSTEM ${GMOCK_INCLUDE_DIR}
 )
 
-LINK_DIRECTORIES(${GMOCK_BINARY_DIR} ${GMOCK_BINARY_DIR}/gtest)
+LINK_DIRECTORIES(${GTEST_BINARY_DIR} ${GMOCK_BINARY_DIR})
 
+# Configure some handy variables.
+SET(PROJECT blackhole-tests)
 SET(CMAKE_BUILD_TYPE "Debug")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
 
