--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -1,8 +1,13 @@
-SET(PROJECT blackhole-benchmark)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)
 
-ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/foreign/epicmeter ${CMAKE_BINARY_DIR}/epicmeter)
+# Prepare benchmarking infrastructure.
+INCLUDE(DownloadBenchmarking)
+DOWNLOAD_BENCHMARKING()
+INCLUDE_DIRECTORIES(${EPICMETER_INCLUDE_DIR})
+LINK_DIRECTORIES(${EPICMETER_BINARY_DIR})
 
+# Configure benchmarking target.
+SET(PROJECT blackhole-benchmark)
 SET(CMAKE_BUILD_TYPE "Release")
 ADD_DEFINITIONS(-DBOOST_DISABLE_ASSERTS=1)
 
@@ -25,11 +30,6 @@ PROJECT(${PROJECT})
 INCLUDE_DIRECTORIES(
     ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_SOURCE_DIR}/foreign/rapidjson/include
-    ${CMAKE_SOURCE_DIR}/foreign/epicmeter/include
-)
-
-LINK_DIRECTORIES(
-    ${CMAKE_BINARY_DIR}/epicmeter
 )
 
 SET(Boost_USE_MULTITHREADED ON)
@@ -43,6 +43,7 @@ SET(BOOST_COMPONENTS
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
 
 ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})
+ADD_DEPENDENCIES(${PROJECT} em)
 
 TARGET_LINK_LIBRARIES(${PROJECT}
     ${Boost_LIBRARIES}
