[Code Clean] Minor reordering again.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -15,7 +15,7 @@ LINK_DIRECTORIES(${GTEST_BINARY_DIR} ${GMOCK_BINARY_DIR})
 # Configure some handy variables.
 SET(PROJECT blackhole-tests)
 SET(CMAKE_BUILD_TYPE "Debug")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -pedantic -Wextra")
 
 IF(ENABLE_ELASTICSEARCH)
     ADD_DEFINITIONS(-DURDL_HEADER_ONLY=1)
@@ -148,6 +148,10 @@ INCLUDE_DIRECTORIES(
     ${CMAKE_SOURCE_DIR}/foreign/rapidjson/include
 )
 
+IF(ENABLE_ELASTICSEARCH)
+    INCLUDE_DIRECTORIES(SYSTEM ${CMAKE_SOURCE_DIR}/foreign/urdl/include)
+ENDIF()
+
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
 
 ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})
@@ -161,12 +165,3 @@ TARGET_LINK_LIBRARIES(${PROJECT}
     gmock
     gtest
 )
-
-IF(ENABLE_ELASTICSEARCH)
-    INCLUDE_DIRECTORIES(
-        SYSTEM ${CMAKE_SOURCE_DIR}/foreign/urdl/include
-    )
-ENDIF()
-
-
-ADD_DEFINITIONS(-std=c++0x)
