[Feature] Code coverage analyze.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -124,12 +124,12 @@ SET(SOURCES_DEVELOP
 
 SET(SOURCES
     ${SOURCE_MAIN}
-    ${SOURCES_BASE}
-    ${SOURCES_FUNCTIONAL}
+#    ${SOURCES_BASE}
+#    ${SOURCES_FUNCTIONAL}
     ${SOURCES_FORMATTER}
-    ${SOURCES_ES}
-    ${SOURCES_TRACING}
-    ${SOURCES_DEVELOP}
+#    ${SOURCES_ES}
+#    ${SOURCES_TRACING}
+#    ${SOURCES_DEVELOP}
 )
 
 SET(Boost_USE_MULTITHREADED ON)
@@ -158,10 +158,17 @@ ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})
 
 ADD_DEPENDENCIES(${PROJECT} googlemock)
 
+IF(ENABLE_TESTING_COVERAGE)
+    INCLUDE(CodeCoverage)
+    SETUP_TARGET_FOR_COVERAGE(coverage ${PROJECT} coverage)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
+ENDIF() # ENABLE_TESTING_COVERAGE
+
 TARGET_LINK_LIBRARIES(${PROJECT}
     ${CMAKE_THREAD_LIBS_INIT}
     ${Boost_LIBRARIES}
     msgpack
     gmock
     gtest
+    ${COVERAGE_LIBRARIES}
 )
