--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ OPTION(BLACKHOLE_HEADER_ONLY "Build as header-only library" ON)
 OPTION(BLACKHOLE_DEBUG "Enable debugging messages support" ON)
 OPTION(ENABLE_TESTING "Enable testing" OFF)
 OPTION(ENABLE_TESTING_THREAD, "Enable testing in multithreaded environment" OFF)
+OPTION(ENABLE_TESTING_COVERAGE, "Enable generating code coverage report" OFF)
 OPTION(ENABLE_EXAMPLES "Enable examples" OFF)
 OPTION(ENABLE_BENCHMARKING "Enable benchmarking" OFF)
 OPTION(ENABLE_ELASTICSEARCH "Enable elasticsearch sink" OFF)
