[CI] Added coverage support.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -124,12 +124,12 @@ SET(SOURCES_DEVELOP
 
 SET(SOURCES
     ${SOURCE_MAIN}
-#    ${SOURCES_BASE}
-#    ${SOURCES_FUNCTIONAL}
+    ${SOURCES_BASE}
+    ${SOURCES_FUNCTIONAL}
     ${SOURCES_FORMATTER}
-#    ${SOURCES_ES}
-#    ${SOURCES_TRACING}
-#    ${SOURCES_DEVELOP}
+    ${SOURCES_ES}
+    ${SOURCES_TRACING}
+    ${SOURCES_DEVELOP}
 )
 
 SET(Boost_USE_MULTITHREADED ON)
