--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -28,8 +28,8 @@ IF(ENABLE_ELASTICSEARCH_DEBUG)
     ADD_DEFINITIONS(-DENABLE_ELASTICSEARCH_DEBUG=1)
 ENDIF()
 
-file(GLOB_RECURSE BLACKHOLE_DOCS . ../../doc/*md)
-file(GLOB_RECURSE BLACKHOLE_HEADERS . ../blackhole/*.[hi]pp)
+file(GLOB_RECURSE BLACKHOLE_DOCS . ${CMAKE_SOURCE_DIR}/doc/*.md)
+file(GLOB_RECURSE BLACKHOLE_HEADERS . ${CMAKE_SOURCE_DIR}/src/*.[hi]pp)
 file(GLOB_RECURSE BLACKHOLE_TESTING_HEADERS . *.hpp)
 
 SET(HEADERS
