--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -29,7 +29,7 @@ IF(ENABLE_ELASTICSEARCH_DEBUG)
 ENDIF()
 
 file(GLOB_RECURSE BLACKHOLE_DOCS . ${CMAKE_SOURCE_DIR}/doc/*.md)
-file(GLOB_RECURSE BLACKHOLE_HEADERS . ${CMAKE_SOURCE_DIR}/src/*.[hi]pp)
+file(GLOB_RECURSE BLACKHOLE_HEADERS . ${CMAKE_SOURCE_DIR}/src/blackhole/*.[hi]pp)
 file(GLOB_RECURSE BLACKHOLE_TESTING_HEADERS . *.hpp)
 
 SET(HEADERS
