--- a/debian/control
+++ b/debian/control
@@ -11,10 +11,19 @@ Homepage: http://3hren.github.io/blackhole
 Package: blackhole-dev
 Section: libdevel
 Architecture: any
+Depends: blackhole4-dev
+Description: Blackhole Logger - Development Headers (V)
+ Fast header-only highly-configurable C++ logging library.
+ This is a virtual package.
+
+Package: blackhole4-dev
+Section: libdevel
+Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- libboost-dev | libboost1.48-dev, 
- libboost-thread-dev | libboost-thread1.48-dev, 
+ libboost-dev | libboost1.48-dev,
+ libboost-thread-dev | libboost-thread1.48-dev,
  libboost-iostreams-dev | libboost-iostreams1.48-dev
+Provides: blackhole-dev
 Description: Blackhole Logger - Development Headers
- Blackhole logger development headers package.
+ Fast header-only highly-configurable C++ logging library.
 
