Tests for verbose logger move. Check that exception handler is also copied. simple test for pusher_t

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -54,6 +54,7 @@ SET(SOURCES_BASE
     datetime/test_Week
     logger/composite
     logger/verbose
+    logger/pusher
     test_AttachableStream
     test_Attribute
     test_Config
