--- a/config.hpp.in
+++ b/config.hpp.in
@@ -1,5 +1,5 @@
-#ifndef CONFIG_H
-#define CONFIG_H
+#ifndef BLACKHOLE_CONFIG_H
+#define BLACKHOLE_CONFIG_H
 
 #define BLACKHOLE_VERSION_MAJOR ${BLACKHOLE_VERSION_MAJOR}
 #define BLACKHOLE_VERSION_MINOR ${BLACKHOLE_VERSION_MINOR}
@@ -28,4 +28,4 @@
 #define BLACKHOLE_INTERNAL_SET_RESERVED_SIZE 6
 #define BLACKHOLE_EXTERNAL_SET_RESERVED_SIZE 16
 
-#endif // CONFIG_H
+#endif // BLACKHOLE_CONFIG_H
