[Misc] Generate ABI version in config file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,11 @@ SET(BLACKHOLE_VERSION_MINOR 4)
 SET(BLACKHOLE_VERSION_PATCH 1)
 SET(BLACKHOLE_VERSION "${BLACKHOLE_VERSION_MAJOR}.${BLACKHOLE_VERSION_MINOR}.${BLACKHOLE_VERSION_PATCH}")
 
+# Evaluate ABI version number.
+MATH(EXPR BLACKHOLE_ABI_VERSION_SUFFIX "${BLACKHOLE_VERSION_MAJOR} * 10000 + ${BLACKHOLE_VERSION_MINOR} * 100 + ${BLACKHOLE_VERSION_PATCH} * 1")
+
+SET(BLACKHOLE_ABI_VERSION v${BLACKHOLE_ABI_VERSION_SUFFIX})
+
 OPTION(BLACKHOLE_HEADER_ONLY "Build as header-only library" ON)
 OPTION(BLACKHOLE_DEBUG "Enable debugging messages support" ON)
 OPTION(ENABLE_TESTING "Enable testing" OFF)
