CMake: added FIND_PACKAGE(Threads) before CMAKE_THREAD_LIBS_INIT variable's use.

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -35,6 +35,10 @@ SET(BOOST_COMPONENTS
 
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
 
+# It's required to FIND_PACKAGE(Threads) to use CMAKE_THREAD_LIBS_INIT
+FIND_PACKAGE (Threads REQUIRED)
+INCLUDE_DIRECTORIES (${Threads_INCLUDE_DIR})
+
 ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})
 
 TARGET_LINK_LIBRARIES(${PROJECT}
