--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -121,6 +121,10 @@ LINK_DIRECTORIES(
 
 FIND_PACKAGE(Boost COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
 
+# It's required to FIND_PACKAGE(Threads) to use CMAKE_THREAD_LIBS_INIT
+FIND_PACKAGE (Threads REQUIRED)
+INCLUDE_DIRECTORIES (${Threads_INCLUDE_DIR})
+
 ADD_EXECUTABLE(${PROJECT} ${HEADERS} ${SOURCES})
 
 TARGET_LINK_LIBRARIES(${PROJECT}
