chore(root): change naming to be more consistent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ if (ENABLE_TESTING)
 	prepare_google_testing()
 
     add_executable(${LIBRARY_NAME}-tests
-        tests/log
+        tests/logger
     )
 
 	enable_google_testing(${LIBRARY_NAME}-tests)
