--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(LIBRARY_NAME blackhole)
 
 project(${LIBRARY_NAME})
 
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/foreign)
+include_directories(BEFORE SYSTEM ${PROJECT_SOURCE_DIR}/foreign)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 # add_library(cppformat STATIC foreign/cppformat/format)
@@ -25,20 +25,12 @@ add_library(${LIBRARY_NAME} SHARED
 add_definitions(-std=c++14)
 
 target_compile_options(${LIBRARY_NAME} PRIVATE
-    -Wall
-    -Wextra
-    -Winit-self
-    -Wconversion
-    -Wno-sign-conversion
-    -Wold-style-cast
-    -Woverloaded-virtual
-    -Wctor-dtor-privacy
-    -Wnon-virtual-dtor
-    -Wunreachable-code
-	-Wuninitialized
-	-Wsometimes-uninitialized
-	-Wdocumentation
-    -pedantic
+    -Weverything
+	-Wno-padded
+	-Wno-shadow
+	-Wno-c++98-compat
+	-Wno-weak-vtables
+	-pedantic
     -pedantic-errors
 )
 
