feat(wrapper): add attributes getter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ if (ENABLE_TESTING)
 
     add_executable(${LIBRARY_NAME}-tests
         tests/root
+		tests/wrapper
     )
 
 	enable_google_testing(${LIBRARY_NAME}-tests)
