refactor(logger): make mutable methods mutable
- Logger interface now has only mutable methods, which describes the
  interface more precisely. That was done because one implementation
  can actually mutate its internal state.
  Moreover even root logger (or maybe rename it?) actually mutates
  itself when delegating records to the handlers.
- Scoped attributes factory is now part of logger interface.
  This is required to be able to transparently create scoped attributes
  no matter how much wrappers or facades there are.
- Log methods arguments has been renamed to better match their aim.
- Add scoped guard interface with documentation.
- Add helper unimplemented macro.
- Fixed all tests and benchmarks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(cppformat STATIC foreign/cppformat/format)
 
 add_library(${LIBRARY_NAME} SHARED
 	src/attribute
+	src/logger
 	src/record
 	src/root
 	src/wrapper
@@ -117,8 +118,8 @@ if (ENABLE_TESTING)
     add_executable(${LIBRARY_NAME}-tests
 		tests/attribute
 		tests/facade
-		tests/mocks/logger
 		tests/record
+		tests/src/mocks/logger
 		tests/wrapper
         tests/root)
 
